Subtitles right encoding
- add chardet module to open subtitles files with right encoding

--- a/anime.ipynb
+++ b/anime.ipynb
@@ -13,14 +13,15 @@
     "import os\n",
     "import subprocess\n",
     "import pysubs2\n",
+    "import chardet\n",
     "\n",
     "logging.basicConfig()\n",
     "LOG = logging.getLogger(__name__)\n",
     "LOG.setLevel(logging.INFO) # DEBUG INFO ERROR CRITICAL\n",
     "\n",
     "FFMPEG = \"F:\\\\Program Files\\\\Jellyfin\\\\Server\\\\FFMPEG.exe\"\n",
-    "MOVIES_PATH = \"E:\\\\Program Data\\\\Videos\\\\Movies\\\\Gundam.0083.Stardust.Memory\"\n",
-    "BASE_TEMPLATE = \"Gundam.0083.Stardust.Memory.E\""
+    "MOVIES_PATH = \"\"\n",
+    "BASE_TEMPLATE = \"\""
    ]
   },
   {
@@ -169,11 +170,16 @@
     "    for _, f in enumerate(os.listdir(movies_path), start=1):\n",
     "        filename, file_extension = os.path.splitext(f)\n",
     "        if file_extension == \".srt\":\n",
-    "            LOG.INFO(f\"{filename = }\")\n",
+    "            \n",
     "            sub_path_source = os.path.join(movies_path, f)\n",
-    "            subs = pysubs2.load(sub_path_source)\n",
+    "            LOG.info(f\"{filename} -> .ass\")\n",
+    "\n",
+    "            with open(sub_path_source, 'rb') as f:\n",
+    "                result = chardet.detect(f.read())\n",
+    "\n",
+    "            subs = pysubs2.load(sub_path_source, encoding=result[\"encoding\"])\n",
     "            sub_path_target = os.path.join(movies_path, f'{filename}.ass')\n",
-    "            subs.save(sub_path_target)\n",
+    "            subs.save(sub_path_target, encoding=\"utf-8\")\n",
     "\n",
     "# __get_max_occur_styles__\n",
     "def __get_max_occur_styles__(movies_path, f, max_styles=5, log_info=False):\n",
@@ -302,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_necessary_metadata(MOVIES_PATH, streams=[\"0\", \"2\"])"
+    "save_necessary_metadata(MOVIES_PATH, streams=[\"0\", \"1\"])"
    ]
   },
   {
@@ -329,8 +335,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make_default_subs(MOVIES_PATH, languages=[\"ja\"], streams=[1])\n",
-    "make_default_subs(MOVIES_PATH, languages=[\"ja\", \"rus\"], streams=[1, 2])"
+    "make_default_subs(MOVIES_PATH, languages=[\"ja\"], streams=[1])\n",
+    "# make_default_subs(MOVIES_PATH, languages=[\"ja\", \"rus\"], streams=[1, 2])"
    ]
   },
   {
@@ -366,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dialogue_subs_ass(movies_path=MOVIES_PATH, max_styles=1, do=True)"
+    "dialogue_subs_ass(movies_path=MOVIES_PATH, max_styles=3, do=True)"
    ]
   },
   {
