--- a/movie.ipynb
+++ b/movie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import subprocess\n",
     "import pysubs2\n",
     "import chardet\n",
+    "import re\n",
     "\n",
     "logging.basicConfig()\n",
     "LOG = logging.getLogger(__name__)\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,25 +50,35 @@
     "                LOG.error(f'the configuration file is set incorrectly: {str(e)}')\n",
     "                return False\n",
     "\n",
-    "        LOG.debug(f'{self.base_template = }')\n",
+    "        LOG.debug(f'{self.movies_path = }')\n",
     "        if os.path.isdir(self.movies_path):\n",
     "            LOG.info(f'MOVIES_PATH: \\\"{self.movies_path}\\\" {CHECK}')\n",
     "        else:\n",
     "            LOG.error(f'MOVIES_PATH: \\\"{self.movies_path}\\\" {CROSS}')\n",
     "            status = False\n",
     "\n",
+    "        LOG.debug(f'{self.ffmpeg = }')\n",
     "        cmd_exec = [self.ffmpeg, '-h']\n",
     "        try:\n",
     "            stdout = subprocess.run(cmd_exec, capture_output=True, text=True)\n",
     "        except Exception as e:\n",
     "            LOG.error(f'\\\"{self.ffmpeg}\\\" not valid: {str(e)}')\n",
-    "            return False\n",
+    "            status = False\n",
     "\n",
     "        LOG.info(f'FFMPEG: \\\"{self.ffmpeg}\\\" {CHECK}')\n",
     "        LOG.debug(f\"{ stdout.args = }\")\n",
     "        LOG.debug(f\"{ stdout.returncode = }\")\n",
     "        LOG.debug(f\"{ stdout.stderr = }\")\n",
     "        LOG.debug(f\"{ stdout.stdout = }\")\n",
+    "\n",
+    "        LOG.debug(f'{self.base_template = }')\n",
+    "        if re.match(r\"^[^\\/\\\\\\:\\*\\?\\\"\\<\\>\\|]+$\", self.base_template) is not None:\n",
+    "            LOG.info(f'BASE_TEMPLATE: \\\"{self.base_template}\\\" {CHECK}')\n",
+    "        else:\n",
+    "            LOG.error(f'BASE_TEMPLATE: \\\"{self.base_template}\\\" {CROSS}')\n",
+    "            self.base_template = BASE_TEMPLATE\n",
+    "            status = False\n",
+    "\n",
     "        return status\n",
     "\n",
     "    # get_info\n",
@@ -336,23 +347,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie = Movie()"
+    "def run():\n",
+    "\tpass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:MOVIES_PATH: \"E:\\Program Data\\Videos\\Movies\\Black.Lagoon\" ✔\n",
+      "INFO:__main__:FFMPEG: \"F:\\Program Files\\Jellyfin\\Server\\FFMPEG.exe\" ✔\n",
+      "INFO:__main__:BASE_TEMPLATE: \"Black.Lagoon\" ✔\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "config.json ✔\n"
+     ]
+    }
+   ],
    "source": [
-    "if not movie.config_verification():\n",
-    "\tprint(f'config.json {CROSS}')\n",
+    "movie = Movie()\n",
+    "if movie.config_verification():\n",
+    "\tprint(f'config.json {CHECK}')\n",
     "else:\n",
-    "\tprint(f'config.json {CHECK}')"
+    "\tprint(f'config.json {CROSS}')\n",
+    "\t# return"
    ]
   },
   {
@@ -444,6 +475,33 @@
    "outputs": [],
    "source": [
     "movie.rename_files(do_rename=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:MOVIES_PATH: \"E:\\Program Data\\Videos\\Movies\\Black.Lagoon\" ✔\n",
+      "INFO:__main__:FFMPEG: \"F:\\Program Files\\Jellyfin\\Server\\FFMPEG.exe\" ✔\n",
+      "INFO:__main__:BASE_TEMPLATE: \"Black.Lagoon\" ✔\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "config.json ✔\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    run()"
    ]
   },
   {
