Extract subtitles from video
- add extract_subtitle()  to extract subtitle stream to external .srt-file

--- a/movie.ipynb
+++ b/movie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,8 +411,29 @@
     "                first_subtitle = f\n",
     "                LOG.debug(f\"{ first_subtitle = }\")\n",
     "                self.__get_max_occur_styles__(file=f, log_info=True)\n",
-    "                break\n",
+    "                return\n",
     "        LOG.info(' There is no .ass subtitles in folder ')\n",
+    "\n",
+    "\n",
+    "    # extract_subtitle\n",
+    "    def extract_subtitle(self):\n",
+    "        for _, f in enumerate(os.listdir(self.movies_path), start=1):\n",
+    "            filename, file_extension = os.path.splitext(f)\n",
+    "            if file_extension == \".mkv\":\n",
+    "                video_path_source = os.path.join(self.movies_path, f)\n",
+    "                subtitle_path_result = os.path.join(self.movies_path, filename+\".srt\")\n",
+    "                LOG.debug(f\"{ video_path_source = }\")\n",
+    "                LOG.info(f\"{ subtitle_path_result = }\")\n",
+    "                cmd_exec = [self.ffmpeg,\n",
+    "                            '-i', video_path_source,\n",
+    "                            '-map', '0:s:0',\n",
+    "                            subtitle_path_result]\n",
+    "                LOG.debug(f\"{ cmd_exec = }\")\n",
+    "                stdout = subprocess.run(cmd_exec, capture_output=True, text=True)\n",
+    "                LOG.debug(f\"{ stdout.args = }\")\n",
+    "                LOG.debug(f\"{ stdout.returncode = }\")\n",
+    "                LOG.debug(f\"{ stdout.stderr = }\")\n",
+    "                LOG.debug(f\"{ stdout.stdout = }\")\n",
     "\n",
     "\n",
     "    # change_subs_styles_ass\n",
@@ -483,25 +504,7 @@
     "\n",
     "########################\n",
     "\n",
-    "movie = Movie()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run():\n",
-    "\tpass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "movie = Movie()\n",
     "if movie.config_verification():\n",
     "\tprint(f'config.json {CHECK}')\n",
     "else:\n",
@@ -527,7 +530,7 @@
     "# first selected audio/subtitles - default\n",
     "selected_streams = [0, 4, 8, 9, 10]\n",
     "movie.selected_streams(selected_streams=selected_streams)\n",
-    "movie.remove_video(save_template=movie.filename_prefix, do_remove=True)"
+    "movie.remove_video(do_remove=True)"
    ]
   },
   {
@@ -537,9 +540,19 @@
    "outputs": [],
    "source": [
     "# option to select streams and languages\n",
-    "streams_languages = {0: 'eng', 4: 'eng', 8: 'eng'}\n",
+    "# https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes\n",
+    "streams_languages = {0: 'jpn', 1: 'eng'}\n",
     "movie.set_default_and_language_streams(streams_languages=streams_languages)\n",
-    "movie.remove_video(save_template=movie.filename_prefix, do_remove=True)"
+    "movie.remove_video(do_remove=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie.extract_subtitle()"
    ]
   },
   {
